# Rag_Crew_Profiler

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  report_collaborative.json  report_hierarchical.json  report_sequential.json  task.md
.agents/rules/: crewai-strict-separation.md  uv-package-management.md  vudovn-antigravity-kit-clean-code.md
.agents/skills/behave-bdd/: SKILL.md
.agents/skills/behave-bdd/references/: gherkin_syntax.md  python_steps.md
.agents/workflows/: generate-unit-tests.md
docs/: Embedding_Index_Lessons_Learned.md  Embedding_Index_踩坑總結.md  RAG_Index_Student_Guide.md  RAG_Index_Student_Guide_EN.md  Yelp Data Translation.md  🏆 [Final Project Guidelines].md
docs/hw_supports/: 00_Environment_Setup_and_Local_Model_Guide.md  00_環境建置與本地模型避坑指南.md
docs/tutorial/: step1_data_objective.md  step2_knowledge.md  step3_rag_tools.md  step4_agents.md  step5_tasks.md  step6_crew_py.md  step7_main_py.md
src/first_crew/: benchmark_indexing.py  benchmark_rag.py  crew.py  crew_collaborative.py  crew_hierarchical.py  crew_sequential.py  main.py  main_collaborative.py  main_hierarchical.py  main_sequential.py  utils.py
src/first_crew/config/: agents.yaml  tasks.yaml  tasks_collaborative.yaml  tasks_hierarchical.yaml  tasks_sequential.yaml
src/first_crew/tools/: rag_tools.py
