[project]
name = "first_crew"
version = "0.1.0"
description = "first_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "cohere>=5.20.7",
    "crewai[google-genai,tools]==1.9.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "litellm>=1.75.3",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
first_crew = "first_crew.main:run"
run_crew = "first_crew.main:run"
train = "first_crew.main:train"
replay = "first_crew.main:replay"
test = "first_crew.main:test"
run_with_trigger = "first_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
